# wcet

./: .gitignore  CMakeLists.txt
misc/: CMakeLists.txt  logger.cpp  logger.h
pass/: CMakeLists.txt  README  abstractSemantics.cpp  abstractSemantics_old.cpp  basicBlocksNumber.cpp  brandNewLinearize.cpp  hello.cpp  helloPass.cpp  initUnreachable.cpp  linearize.cpp  linearize_old.cpp  loopInterpreter.cpp  recursionBrakes.cpp  singleExit.cpp
test/: CMakeLists.txt  a.c  pipeline  test.cpp
test/cases/: CMakeLists.txt  branch.cpp  doublecorellatedloop.c  doublenestedloop.c  linear.cpp  loop.cpp  multiplebranch.c  mutualrecursion.c  nestedbranch.c  quicksort.c  selfrecursion.c  simplebranch.c  simplelinear.c  singleloop.c  switchbranch.c
